--- a/AirQuality/app/build.gradle
+++ b/AirQuality/app/build.gradle
@@ -2,19 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     signingConfigs {
-        release {
-            keyAlias 'platform.keystore'
-            keyPassword 'platform'
-            storeFile file('C:/Users/e560866/code/stash_new/commones_android/Source/PreBuild/security/platform.keystore')
-            storePassword 'platform'
-        }
 
-        debug {
-            keyAlias 'platform.keystore'
-            keyPassword 'platform'
-            storeFile file('C:/Users/e560866/code/stash_new/commones_android/Source/PreBuild/security/platform.keystore')
-            storePassword 'platform'
-        }
     }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
@@ -44,4 +32,6 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
