--- a/AirQuality/app/build.gradle
+++ b/AirQuality/app/build.gradle
@@ -2,22 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     signingConfigs {
-        release {
-            keyAlias 'platform.keystore'
-            keyPassword 'platform'
-            storeFile file('C:/Users/e560866/code/stash_new/commones_android/Source/PreBuild/security/platform.keystore')
-            storePassword 'platform'
-        }
-
-        debug {
-            keyAlias 'platform.keystore'
-            keyPassword 'platform'
-            storeFile file('C:/Users/e560866/code/stash_new/commones_android/Source/PreBuild/security/platform.keystore')
-            storePassword 'platform'
-        }
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.test.poweroptimizer"
         minSdkVersion 23
@@ -29,19 +16,18 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
         }
         debug {
             minifyEnabled false
-            signingConfig signingConfigs.debug
         }
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.android.gms:play-services:10.0.1'
 }
